Product page customisations added and Cart Modified

--- a/assets/scss/components/_components.scss
+++ b/assets/scss/components/_components.scss
@@ -208,3 +208,9 @@
 
 // Also Bought
 @import "chiara/alsoBought/component";
+
+
+
+// Pleximisations Components
+// --------------------------
+@import "pleximisations/components";
