--- a/templates/components/pleximisations/products/product-customisations.html
+++ b/templates/components/pleximisations/products/product-customisations.html
@@ -3,6 +3,7 @@
 
 <script src="https://kit.fontawesome.com/6b60be86d6.js" crossorigin="anonymous"></script>
 <script src="../../../assets/js/pleximisations/components.js"></script>
+<script src="../../../assets/js/pleximisations/stencil-utils.min.js"></script>
 
 <div id="pleximisation-block">
     <div class="pleximisation-add" onclick="addPleximisation()"><i class="fa-solid fa-plus"></i></div>
@@ -35,12 +36,13 @@
             <div class="pleximisation-pricing-unit">$</div>
         </div>
 
-        <input type="text" id="pleximisation-product-id" value='{{product.id}}'>
-        <input type="text" id="pleximisation-product-image" value='{{product.main_image.data}}'>
-        <input type="text" id="pleximisation-product-brand" value='{{product.brand.name}}'>
-        <input type="text" id="pleximisation-product-brand-url" value='{{product.brand.url}}'>
-        <input type="text" id="pleximisation-product-title" value='{{product.title}}'>
-        <input type="text" id="pleximisation-product-sku" value='{{product.sku}}'>
+        <div class="pleximisation-product-info" data-product-id='{{product.id}}'>
+            <input type="text" id="pleximisation-product-id" value='{{product.id}}'>
+            <input type="text" id="pleximisation-product-image" value='{{product.main_image.data}}'>
+            <input type="text" id="pleximisation-product-brand" value='{{product.brand.name}}'>
+            <input type="text" id="pleximisation-product-brand-url" value='{{product.brand.url}}'>
+            <input type="text" id="pleximisation-product-title" value='{{product.title}}'>
+        </div>
 
         <script>
             let currentVariation;
