Base Variations and Loading to Cart sorted

--- a/templates/components/pleximisations/cart/content.html
+++ b/templates/components/pleximisations/cart/content.html
@@ -1,4 +1,6 @@
 <table class="cart" data-cart-quantity="{{cart.quantity}}">
+
+    <script src="../../../assets/js/pleximisations/cart.js"></script>
     
     <thead class="cart-header">
         <tr>
