Switched information inputs to hidden

--- a/templates/components/pleximisations/products/product-customisations.html
+++ b/templates/components/pleximisations/products/product-customisations.html
@@ -37,15 +37,15 @@
         </div>
 
         <div class="pleximisation-product-info" data-product-id='{{product.id}}'>
-            <input type="text" id="pleximisation-product-id" value='{{product.id}}'>
-            <input type="text" id="pleximisation-product-image" value='{{product.main_image.data}}'>
-            <input type="text" id="pleximisation-product-brand" value='{{product.brand.name}}'>
-            <input type="text" id="pleximisation-product-brand-url" value='{{product.brand.url}}'>
-            <input type="text" id="pleximisation-product-title" value='{{product.title}}'>
-            
+            <input type="hidden" id="pleximisation-product-id" value='{{product.id}}'>
+            <input type="hidden" id="pleximisation-product-image" value='{{product.main_image.data}}'>
+            <input type="hidden" id="pleximisation-product-brand" value='{{product.brand.name}}'>
+            <input type="hidden" id="pleximisation-product-brand-url" value='{{product.brand.url}}'>
+            <input type="hidden" id="pleximisation-product-title" value='{{product.title}}'>
+
             {{#each product.options}}
     
-                <input type="text" id="pleximisation-product-{{toLowerCase this.display_name}}">
+                <input type="hidden" id="pleximisation-product-{{toLowerCase this.display_name}}">
                 
             {{/each}}
         </div>
