--- a/assets/scss/components/pleximisations/_components.scss
+++ b/assets/scss/components/pleximisations/_components.scss
@@ -206,6 +206,13 @@
     text-align: center;
 }
 
+// CART
+// CART
+// CART
+a[data-pleximisation-id] {
+    margin-left: 15px;
+}
+
 @media screen and (max-width: 700px) {
     .pleximisation-form-group .form-input {
         width: 100%;
