Cart totals calculations sorted

--- a/templates/components/pleximisations/cart/totals.html
+++ b/templates/components/pleximisations/cart/totals.html
@@ -4,55 +4,32 @@
             <div class="cart-total-label">
                 <strong>{{lang 'cart.checkout.subtotal'}}:</strong>
             </div>
-            <div class="cart-total-value">
-                {{#or customer (if theme_settings.restrict_to_login '!==' true)}}
-                    <span>{{cart.sub_total.formatted}}</span>
-                {{else}}
-                    {{> components/common/login-for-pricing}}
-                {{/or}}
+            <div id="pleximisation-totals-subtotal" class="cart-total-value">
+                <span></span>
             </div>
         </li>
-        {{#if cart.gift_wrapping_cost.amount}}
-            <li class="cart-total">
-                <div class="cart-total-label">
-                    <strong>{{lang 'cart.checkout.gift_wrapping'}}:</strong>
-                </div>
-                <div class="cart-total-value">
-                    <span>{{cart.gift_wrapping_cost.formatted}}</span>
-                </div>
-            </li>
-        {{/if}}
-        {{#each cart.taxes}}
-            <li class="cart-total">
-                <div class="cart-total-label">
-                    <strong>{{name}}:</strong>
-                </div>
-                <div class="cart-total-value">
-                    <span>{{cost.formatted}}</span>
-                </div>
-            </li>
-        {{/each}}
-        {{#if cart.discount }}
-            <li class="cart-total">
-                <div class="cart-total-label">
-                    <strong>{{lang 'cart.discount'}}:</strong>
-                </div>
-                <div class="cart-total-value">
-                    {{cart.discount.formatted}}
-                </div>
-            </li>
-        {{/if}}
+
+        <li class="cart-total">
+            <div class="cart-total-label">
+                <strong>GST:</strong>
+            </div>
+            <div id="pleximisation-totals-tax" class="cart-total-value">
+                <span></span>
+            </div>
+        </li>
+
         <li class="cart-total">
             <div class="cart-total-label">
                 <strong>{{lang 'cart.checkout.grand_total'}}:</strong>
             </div>
-            <div class="cart-total-value cart-total-grandTotal">
+            <div id="pleximisation-totals-total" class="cart-total-value cart-total-grandTotal">
                 {{#or customer (if theme_settings.restrict_to_login '!==' true)}}
-                    <span>{{cart.grand_total.formatted}}</span>
+                    <span></span>
                 {{else}}
                     {{> components/common/login-for-pricing}}
                 {{/or}}
             </div>
         </li>
+        
     </ul>
 </div>
