--- a/templates/components/pleximisations/cart/cart-form.html
+++ b/templates/components/pleximisations/cart/cart-form.html
@@ -1,39 +1,44 @@
 <form action="" class="pleximisation-details-form">
+
+    <div class="pleximisation-notes">
+        <p class="pleximisation-body-text" style="padding: 10px; border: 1px solid black;">
+            <i class="fa-solid fa-check"></i> <em>This quote request is free. No upfront payment required.</em>
+        </p>
+    </div>
     
     <h2>Your Details</h2>
     <div class="pleximisation-form-group">
-        <input type="text" class="form-input" name="plex-firstname" id="" placeholder="*First Name" required>
-        <input type="text" class="form-input" name="plex-lastname" id="" placeholder="*Last Name" required>
+        <input type="text" class="form-input" name="plex-firstname" id="form-first-name" placeholder="*First Name" data-form-field required>
+        <input type="text" class="form-input" name="plex-lastname" id="form-last-name" placeholder="*Last Name" data-form-field required>
     </div>
     
     <div class="pleximisation-form-group">
-        <input type="text" class="form-input" name="plex-company" id="" placeholder="Company Name" required>
-        <input type="email" class="form-input" name="plex-email" id="" placeholder="*Email Address" required>
+        <input type="text" class="form-input" name="plex-company" id="form-company-name" placeholder="Company Name" data-form-field required>
+        <input type="email" class="form-input" name="plex-email" id="form-email" placeholder="*Email Address" data-form-field required>
     </div>
 
     <div class="pleximisation-form-group">
-        <input type="tel" class="form-input" name="plex-phone" id="" placeholder="Phone Number (Format: 07 1234 5678)" pattern="[0-9]{10}" maxlength="10">
-        <input type="tel" class="form-input" name="plex-mobile" id="" placeholder="Mobile Number (Format: 0412 345 678)" pattern="[0-9]{10}" maxlength="10">
+        <input type="tel" class="form-input" name="plex-phone" id="form-phone" placeholder="Phone Number (Format: 07 1234 5678)" maxlength="10" data-form-field>
+        <input type="tel" class="form-input" name="plex-mobile" id="form-mobile" placeholder="Mobile Number (Format: 0412 345 678)" maxlength="10" data-form-field>
     </div>
 
     <div class="pleximisation-form-group">
-        <input type="text" class="form-input" name="plex-address" id="" placeholder="Street Address">
-        <input type="text" class="form-input" name="plex-suburb" id="" placeholder="Suburb">
+        <input type="text" class="form-input" name="plex-address" id="form-street-address" placeholder="*Street Address" data-form-field required>
+        <input type="text" class="form-input" name="plex-suburb" id="form-suburb" placeholder="*Suburb" data-form-field required>
     </div>
 
     <div class="pleximisation-form-group">
-        <input type="number" class="form-input" name="plex-postcode" id="" placeholder="*Postcode" maxlength="4">
-        <input type="text" class="form-input" name="plex-state" id="" placeholder="*State">
+        <input type="number" class="form-input" name="plex-postcode" id="form-postcode" placeholder="*Postcode" maxlength="4" data-form-field required>
+        <input type="text" class="form-input" name="plex-state" id="form-state" placeholder="*State" data-form-field required>
     </div>
 
     <div class="pleximisation-form-group">
-        <textarea class="form-input" name="plex-comments" id="" cols="30" rows="6" placeholder="Please add any extra information that may help us provide you with an accurate quote"></textarea>
+        <textarea class="form-input" name="plex-comments" id="form-comments" cols="30" rows="6" placeholder="Please add any extra information that may help us provide you with an accurate quote" data-form-field></textarea>
     </div>
 
-    <div class="pleximisation-notes">
+    <!-- <div class="pleximisation-notes">
         <p class="pleximisation-body-text">A maximum of 4 files are allowed to be uploaded.<br>
-            The total accumulated size of the files must be under 10 MB<br>
-            with each individual file size being less than or equal to 3 MB each</p>
+            The total accumulated size of the files must be under 2 MB</p>
         <p class="pleximisation-body-text">The uploaded files must be <span class="pleximisation-highlight">svg, eps, pdf</span>, png or jpg.<br>
             Formats in orange are preferred.</p>
     </div>
@@ -42,14 +47,12 @@
         <a class="button button--secondary" href="{{urls.checkout.single_address}}" title="Click here to submit your quote request">
             Upload Decoration Files
         </a>
-    </div>
+    </div> -->
 
-    <div class="pleximisation-notes">
-        <p class="pleximisation-body-text">This quote request is free. No upfront payment required.</p>
-    </div>
+    <p class="pleximisation-error-message" id="pleximisation-cart-message">Error Message</p>
 
     <div class="cart-actions" style="margin: auto;">
-        <a class="button button--primary" href="{{urls.checkout.single_address}}" title="Click here to submit your quote request">
+        <a class="button button--primary" title="Click here to submit your quote request" onclick="submitQuote();">
             Request Quote
         </a>
     </div>
