Sorted link click and EmailJS HTML inserts

--- a/templates/components/pleximisations/cart/cart-form.html
+++ b/templates/components/pleximisations/cart/cart-form.html
@@ -52,7 +52,7 @@
     <p class="pleximisation-error-message" id="pleximisation-cart-message">Error Message</p>
 
     <div class="cart-actions" style="margin: auto;">
-        <a class="button button--primary" title="Click here to submit your quote request" onclick="submitQuote();">
+        <a class="button button--primary" id="pleximisation-submit-button" title="Click here to submit your quote request" onclick="submitQuote();">
             Request Quote
         </a>
     </div>
