--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -155,5 +155,6 @@
 
         {{{footer.scripts}}}
         {{{snippet 'footer'}}}
+        <script src="{{cdn 'assets/js/pleximisations/general.js'}}"></script>
     </body>
 </html>
